bump z-index to prevent it falling behind content

--- a/themes/salix/assets/css/main.css
+++ b/themes/salix/assets/css/main.css
@@ -24,6 +24,7 @@ body {
 	position: fixed;
 	right: 2rem;
 	top: 2rem;
+	z-index: 10;
 }
 
 #contactfloat img {
